; ModuleID = '/home/carl/AnghaBench/openssl/crypto/asn1/extr_x_long.c_long_print.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/asn1/extr_x_long.c_long_print.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"%ld\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32**, i32*, i32, i32*)* @long_print to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @long_print(i32* %0, i32** %1, i32* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i32** %1, i32*** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %12 = load i32**, i32*** %7, align 8
  %13 = load i32**, i32*** %7, align 8
  %14 = load i32*, i32** %13, align 8
  %15 = load i64, i64* %11, align 8
  %16 = call i32 @COPY_SIZE(i32* %14, i64 %15)
  %17 = call i32 @memcpy(i64* %11, i32** %12, i32 %16)
  %18 = load i32*, i32** %6, align 8
  %19 = load i64, i64* %11, align 8
  %20 = call i32 @BIO_printf(i32* %18, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i64 %19)
  ret i32 %20
}

declare dso_local i32 @memcpy(i64*, i32**, i32) #1

declare dso_local i32 @COPY_SIZE(i32*, i64) #1

declare dso_local i32 @BIO_printf(i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
